k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: byteguardx
  labels:
    name: byteguardx
    app: byteguardx
